# AI-Revenue-Recovery

./: .dockerignore  .gitignore  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  agents-cli-manifest.yaml  data.json  eval_dataset.json  index.html  run_demo.py  run_eval.py
app/: __init__.py  config.py  dashboard.py
app/pages/: memory_explorer.py  priority_dashboard.py  run_analysis.py
customer-support-agent/: Dockerfile  pyproject.toml
customer-support-agent/app/: agent.py  fastapi_server.py  mcp_server.py
customer-support-agent/app/pages/: execution_traces.py  monitoring.py  run_pipeline.py
customer-support-agent/data/: customers.json
customer-support-agent/tests/: conftest.py  test_agent.py
