[project]
name = "customer-support-agent"
version = "0.1.0"
description = "Revenue risk analysis workflow agent using ADK 2.0"
dependencies = [
    "google-adk>=2.0.0a0",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "streamlit",
    "pandas",
    "plotly",
    "psutil"
    "mcp>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# optional uv settings
